fix: gitalk horizontal alignment

--- a/src/templates/blog-post.scss
+++ b/src/templates/blog-post.scss
@@ -29,4 +29,8 @@
       font-weight: 600;
     }
   }
+
+  #gitalk-container {
+    margin: 0 auto;
+  }
 }
